feat. add 송금 테이블 및 JPA 엔티티 추가

--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -26,6 +26,7 @@ services:
     volumes:
       - ./mysql/master-data:/var/lib/mysql
       - ./mysql/cnf/master.cnf:/etc/mysql/conf.d/my.cnf
+      - ./mysql/initdb.d:/docker-entrypoint-initdb.d
     networks:
       - sendy-net
 
