--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,17 @@ spring:
       hibernate:
         format_sql: true
         use_sql_comments: true
+
+springdoc:
+  packages-to-scan: com
+  default-consumes-media-type: application/json;charset=UTF-8
+  default-produces-media-type: application/json;charset=UTF-8
+  swagger-ui:
+    path: /swagger-ui.html
+    display-request-duration: true
+    operations-sorter: alpha
+
+jwt:
+  secret-key: DYS6feNXKYnsLOebpSU0Ljm05bgit9j3sc3YYoBYh2E=
+  access-token-expire-time: 300
+  refresh-token-expire-time: 7200
