SENDY-5-29 -- user -테스트 코드 추가 및 사용자 등록, 이메일 검증 에러 수정
-- email
- user_id 컬럼 추가 및 DDL 추가

- security "/user/**" 임시 수정
- swagger 설정 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   h2:
     console:
       enabled: true
-      path: /h2-console
+#      path: /h2-console
   datasource:
     hikari:
       jdbc-url: jdbc:h2:mem:testdb;MODE=MySQL;
@@ -47,11 +47,13 @@ aes256:
   key: d2f3de5ce2bef6aad4c2b01e2bffdcd6
 
 springdoc:
-  packages-to-scan: com
+  override-with-generic-response: false
+  packages-to-scan: com.sendy
   default-consumes-media-type: application/json;charset=UTF-8
   default-produces-media-type: application/json;charset=UTF-8
   swagger-ui:
-    path: /swagger-ui.html
+    enabled: true
+    path: /swagger-ui
     display-request-duration: true
     operations-sorter: alpha
 
