--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -10,7 +10,7 @@ spring:
       path: /h2-console
   datasource:
     hikari:
-      jdbc-url: jdbc:h2:mem:testdb;MODE=MySQL;
+      jdbc-url: jdbc:h2:mem:testdb;MODE=MySQL;DATABASE_TO_LOWER=TRUE
       driver-class-name: org.h2.Driver
       username: sa
       password:
@@ -25,7 +25,6 @@ spring:
       hibernate:
         format_sql: true
         use_sql_comments: true
-        dialect: org.hibernate.dialect.MySQLDialect
   mail:
     host: smtp.gmail.com
     port: 587
