USER 컨벤션 수정 - 스웨거 설정 추가(local에만 추가) - ddl bool 타입 tjnyint(1) 수정 - user -> users 수정 - userController return 타입 수정

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -47,6 +47,7 @@ aes256:
   key: d2f3de5ce2bef6aad4c2b01e2bffdcd6
 
 springdoc:
+  override-with-generic-response: false
   packages-to-scan: com
   default-consumes-media-type: application/json;charset=UTF-8
   default-produces-media-type: application/json;charset=UTF-8
