--- a/.github/workflows/JunitCi.yml
+++ b/.github/workflows/JunitCi.yml
@@ -16,20 +16,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
-          cache: gradle
 
       - name: Grant execute permission for Gradle
         run: chmod +x ./gradlew
 
-      - name: Build (compile & test)
-        run: ./gradlew build
-
-      - name: Check test failure
-        if: ${{ failure() }}
-        run: echo "❌ Tests failed! Check the test results above."
-
+      - name: Run only tests
+        run: ./gradlew test --stacktrace
