--- a/.github/workflows/JunitCi.yml
+++ b/.github/workflows/JunitCi.yml
@@ -1,16 +1,9 @@
 name: Kotlin SpringBoot JUnit CI 
 on:
-  push:
-    branches: [ "**" ]
-    paths:
-      - '**.kt'
-      - 'build.gradle.kts'
-      - 'settings.gradle.kts'
-      - 'src/**'
   pull_request:
-    branches: [ "**" ]
+    branches: [ develop ]    # main 브랜치에 PR 보낼 때 실행
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -24,6 +17,16 @@ jobs:
 
       - name: Grant execute permission for Gradle
         run: chmod +x ./gradlew
+        
+      - name: Test with Gradle
+        run: ./gradlew --info test
 
       - name: Run only tests
         run: ./gradlew test --stacktrace
+
+      # Test 후 Report 생성
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        if: always()
+        with:
+          junit_files: '**/build/test-results/test/TEST-*.xml'
