--- a/.github/workflows/JunitCi.yml
+++ b/.github/workflows/JunitCi.yml
@@ -1,9 +1,11 @@
 name: Kotlin SpringBoot JUnit CI 
 on:
   pull_request:
-    branches: [ develop ]    # main 브랜치에 PR 보낼 때 실행
+    branches:
+      - develop   # main 브랜치에 PR 보낼 때 실행
 jobs:
   test:
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -23,10 +25,3 @@ jobs:
 
       - name: Run only tests
         run: ./gradlew test --stacktrace
-
-      # Test 후 Report 생성
-      - name: Publish Test Results
-        uses: EnricoMi/publish-unit-test-result-action@v2
-        if: always()
-        with:
-          junit_files: '**/build/test-results/test/TEST-*.xml'
