--- a/.github/workflows/JunitCi.yml
+++ b/.github/workflows/JunitCi.yml
@@ -24,7 +24,7 @@ jobs:
         run: ./gradlew --info test
 
       - name: Run only tests
-        run: ./gradlew test --stacktrace
+        run: ./gradlew --stacktrace
 
       - name: 테스트 결과를 PR에 코멘트로 등록합니다
         uses: EnricoMi/publish-unit-test-result-action@v1
