--- a/src/main/resources/application-prd.yml
+++ b/src/main/resources/application-prd.yml
@@ -6,10 +6,10 @@ spring:
     name: sendy
   datasource:
     hikari:
-      jdbc-url: ${SPRING_DATASOURCE_JDBC_URL}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
+      jdbc-url: ${SPRING_DATASOURCE_JDBC_URL:jdbc:mysql://localhost:3306/sendy}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
       driver-class-name: com.mysql.cj.jdbc.Driver
-      username: ${SPRING_DATASOURCE_USERNAME}
-      password: ${SPRING_DATASOURCE_PASSWORD}
+      username: ${SPRING_DATASOURCE_USERNAME:sendy_master}
+      password: ${SPRING_DATASOURCE_PASSWORD:sendy_master}
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
@@ -17,6 +17,9 @@ spring:
     hibernate:
       ddl-auto: validate
     open-in-view: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
   mail:
     host: smtp.gmail.com
     port: 587
