--- a/src/main/resources/application-prd.yml
+++ b/src/main/resources/application-prd.yml
@@ -4,6 +4,10 @@ server:
 spring:
   application:
     name: sendy
+  data:
+    redis:
+      host: localhost
+      port: 6379
   datasource:
     hikari:
       jdbc-url: ${SPRING_DATASOURCE_JDBC_URL:jdbc:mysql://localhost:3306/sendy}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
