도커 레디스 설정 추가

--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -70,6 +70,11 @@ services:
       - '--web.enable-lifecycle'
     networks:
       - sendy-net
+  redis:
+    image: redis:latest
+    container_name: my-redis
+    ports:
+      - "6379:6379"
 
 networks:
   sendy-net:
