--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -75,7 +75,16 @@ services:
     container_name: my-redis
     ports:
       - "6379:6379"
-
+    volumes:
+      - ./redis/data:/data
+      - ./redis/conf/redis.conf:/usr/local/conf/redis.conf
+    restart: always
+    command: redis-server /usr/local/conf/redis.conf
+    labels:
+      - "name=redis"
+      - "mode=standalone"
+    networks:
+      - sendy-net
 networks:
   sendy-net:
 
