feat: 이체 도메인 모듈 분리 및 의존성 참조 정상 동작 확인 완료(cherry pick)

--- a/sendy-transfer-scheduler/src/main/resources/application-prd.yml
+++ b/sendy-transfer-scheduler/src/main/resources/application-prd.yml
@@ -10,3 +10,7 @@ spring:
       driver-class-name: com.mysql.cj.jdbc.Driver
       username: ${SPRING_DATASOURCE_USERNAME:sendy_master}
       password: ${SPRING_DATASOURCE_PASSWORD:sendy_master}
+
+logging:
+  level:
+    root: debug
