--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -63,3 +63,8 @@ jwt:
   secret-key: DYS6feNXKYnsLOebpSU0Ljm05bgit9j3sc3YYoBYh2E=
   access-token-expire-time: 300
   refresh-token-expire-time: 7200
+logging:
+  level:
+    com.sendy: INFO
+  file:
+    name: ./logs
