--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -85,6 +85,33 @@ services:
       - "mode=standalone"
     networks:
       - sendy-net
+
+  zookeeper:
+    container_name: sendy-zookeeper
+    image: confluentinc/cp-zookeeper:7.5.1
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    networks:
+      - sendy-net
+
+  kafka:
+    container_name: sendy-kafka
+    image: confluentinc/cp-kafka:7.5.1
+    hostname: kafka
+    depends_on:
+      - zookeeper
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT'
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://localhost:9092'
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    networks:
+      - sendy-net
+
 networks:
   sendy-net:
 
