--- a/sendy-transfer-scheduler/src/main/resources/application-prd.yml
+++ b/sendy-transfer-scheduler/src/main/resources/application-prd.yml
@@ -13,4 +13,6 @@ spring:
 
 logging:
   level:
-    root: debug
+    org.hibernate.sql: debug
+    org.hibernate.type: trace
+    org.springframework.jdbc: trace
