--- a/sendy-transfer-scheduler/src/main/resources/application-local.yml
+++ b/sendy-transfer-scheduler/src/main/resources/application-local.yml
@@ -14,3 +14,6 @@ spring:
       driver-class-name: org.h2.Driver
       username: sa
       password:
+  kafka:
+    consumer:
+      group-id: reservation-transfer
