refactor. 이벤트 메세지 source 제거(토픽으로 표현 가능)

--- a/sendy-transfer-scheduler/src/main/resources/application-prd.yml
+++ b/sendy-transfer-scheduler/src/main/resources/application-prd.yml
@@ -12,7 +12,7 @@ spring:
       password: ${SPRING_DATASOURCE_PASSWORD:sendy_master}
   kafka:
     consumer:
-      group-id: reservation-transfer
+      group-id: transfer-scheduler
 
 
 logging:
