--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -29,6 +29,8 @@ spring:
       hibernate:
         format_sql: true
         use_sql_comments: true
+      session_factory:
+        interceptor: com.sendy.support.util.LogUtilInterceptor
   mail:
     host: smtp.gmail.com
     port: 587
@@ -66,5 +68,7 @@ jwt:
 logging:
   level:
     com.sendy: INFO
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql: TRACE
   file:
     name: ./logs
