--- a/src/main/resources/application-prd.yml
+++ b/src/main/resources/application-prd.yml
@@ -24,6 +24,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
+#    session_factory:
+#      interceptor: com.sendy.*.MDCRequestHandlerCommentInterceptor
   mail:
     host: smtp.gmail.com
     port: 587
