--- a/sendy-legacy-api/src/main/resources/application-local.yml
+++ b/sendy-legacy-api/src/main/resources/application-local.yml
@@ -6,27 +6,33 @@ spring:
     name: sendy
   data:
     redis:
-      host: localhost
-      port: 6379
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+      host: ${SPRING_REDIS_HOST:localhost}
+      port: ${SPRING_REDIS_PORT:6379}
+  kafka:
+    bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS:kafka:9092}
+    producer:
+      bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS:kafka:9092}
+    consumer:
+      group-id: ${SPRING_KAFKA_CONSUMER_GROUP_ID:sendy-api-local-group}
+      auto-offset-reset: ${SPRING_KAFKA_CONSUMER_AUTO_OFFSET_RESET:earliest}
+
   datasource:
     hikari:
-      jdbc-url: jdbc:h2:mem:testdb;MODE=MySQL;DATABASE_TO_LOWER=TRUE
-      driver-class-name: org.h2.Driver
-      username: sa
-      password:
+      jdbc-url: ${SPRING_DATASOURCE_JDBC_URL:jdbc:mysql://localhost:3306/sendy?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8}
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      username: ${SPRING_DATASOURCE_USERNAME:sendy_master}
+      password: ${SPRING_DATASOURCE_PASSWORD:sendy_master}
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: validate
+    open-in-view: false
     show-sql: true
     properties:
       hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
         format_sql: true
         use_sql_comments: true
   mail:
