feat. openFeign 추가(동기 호출), init.sql 수정(예약 송금)

--- a/sendy-transfer-consumer/src/main/resources/application-local.yml
+++ b/sendy-transfer-consumer/src/main/resources/application-local.yml
@@ -17,3 +17,11 @@ spring:
   kafka:
     consumer:
       group-id: transfer-scheduler
+
+logging:
+  level:
+    feign: debug
+
+feign:
+  transfer:
+    url: http://localhost:8080/transfers
