feat. 예약 송금 개발 완료, 카프카 메세지 발행 은 이후 처리

--- a/sendy-transfer-consumer/src/main/resources/application-prd.yml
+++ b/sendy-transfer-consumer/src/main/resources/application-prd.yml
@@ -19,3 +19,7 @@ logging:
   level:
     org.hibernate.type: trace
     org.springframework.jdbc: trace
+
+feign:
+  transfer:
+    url: http://sendy-legacy-api:8080/inner/transfers
