--- a/sendy-legacy-api/src/main/resources/application-prd.yml
+++ b/sendy-legacy-api/src/main/resources/application-prd.yml
@@ -12,7 +12,7 @@ spring:
   kafka:
     bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS:kafka:9092}
     consumer:
-      group-id: ${SPRING_KAFKA_CONSUMER_GROUP_ID:sendy-api-group}
+      group-id: ${SPRING_KAFKA_CONSUMER_GROUP_ID:sendy-legacy-api-group}
   datasource:
     hikari:
       jdbc-url: ${SPRING_DATASOURCE_JDBC_URL:jdbc:mysql://localhost:3306/sendy}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
