--- a/sendy-legacy-api/src/main/resources/application-prd.yml
+++ b/sendy-legacy-api/src/main/resources/application-prd.yml
@@ -7,18 +7,21 @@ spring:
     name: sendy
   data:
     redis:
-      host: ${SPRING_REDIS_HOST:localhost}
-      port: ${SPRING_REDIS_PORT:6379}
+      host: my-redis
+      port: 6379
   kafka:
-    bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS:kafka:9092}
+    bootstrap-servers: kafka:29092
+    producer:
+      bootstrap-servers: kafka:29092
     consumer:
-      group-id: ${SPRING_KAFKA_CONSUMER_GROUP_ID:sendy-legacy-api-group}
+      group-id: sendy-legacy-api-group
+      auto-offset-reset: earliest
   datasource:
     hikari:
-      jdbc-url: ${SPRING_DATASOURCE_JDBC_URL:jdbc:mysql://localhost:3306/sendy}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
+      jdbc-url: jdbc:mysql://mysql-master:3306/sendy?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
       driver-class-name: com.mysql.cj.jdbc.Driver
-      username: ${SPRING_DATASOURCE_USERNAME:sendy_master}
-      password: ${SPRING_DATASOURCE_PASSWORD:sendy_master}
+      username: sendy_master
+      password: sendy_master
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
@@ -26,9 +29,12 @@ spring:
     hibernate:
       ddl-auto: validate
     open-in-view: false
+    show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
+        format_sql: true
+        use_sql_comments: true
   mail:
     host: smtp.gmail.com
     port: 587
@@ -51,6 +57,7 @@ aes256:
   key: d2f3de5ce2bef6aad4c2b01e2bffdcd6
 
 springdoc:
+  override-with-generic-response: false
   packages-to-scan: com
   default-consumes-media-type: application/json;charset=UTF-8
   default-produces-media-type: application/json;charset=UTF-8
@@ -63,10 +70,7 @@ jwt:
   secret-key: DYS6feNXKYnsLOebpSU0Ljm05bgit9j3sc3YYoBYh2E=
   access-token-expire-time: 300
   refresh-token-expire-time: 7200
+
 logging:
   level:
     com.sendy: INFO
-    org.hibernate.SQL: DEBUG
-    org.hibernate.type.descriptor.sql: TRACE
-  file:
-    name: ./logs
