--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -111,7 +111,8 @@ jobs:
       - name: 설정 파일 생성
         env:
           DOCKER_COMPOSE_PROD_SPRING: ${{ secrets.DOCKER_COMPOSE_PROD_SPRING_YML }}
-        run: |                    
+        run: | 
+          mkdir -p ../docker-compose
           echo "$DOCKER_COMPOSE_PROD_SPRING" > ../docker-compose/docker-compose.prod.spring.yml
       - name: 설정 파일 EC2로 전송
         uses: appleboy/scp-action@master
