--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -112,8 +112,8 @@ jobs:
         env:
           DOCKER_COMPOSE_PROD_SPRING: ${{ secrets.DOCKER_COMPOSE_PROD_SPRING_YML }}
         run: | 
-          mkdir -p ../docker-compose
-          echo "$DOCKER_COMPOSE_PROD_SPRING" > ../docker-compose/docker-compose.prod.spring.yml
+           mkdir -p docker-compose
+           echo "$DOCKER_COMPOSE_PROD_SPRING" > docker-compose/docker-compose.prod.spring.yml
       - name: 설정 파일 EC2로 전송
         uses: appleboy/scp-action@master
         with:
