--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,7 +60,39 @@ jobs:
         env:
           APPLICATION_SECRET: ${{ secrets.APPLICATION_SECRET_YML }}
         run: |
-          echo "$APPLICATION_SECRET" > src/main/resources/application-secret.yml
+          echo "$APPLICATION_SECRET" > sendy-legacy-api/src/main/resources/application-secret.yml
+      - name: application-secret.yml 생성
+        env:
+          APPLICATION_SECRET: ${{ secrets.APPLICATION_SECRET_YML }}
+        run: |
+          echo "$APPLICATION_SECRET" > sendy-notification-api/src/main/resources/application-secret.yml
+      - name: application-secret.yml 생성
+        env:
+          APPLICATION_SECRET: ${{ secrets.APPLICATION_SECRET_YML }}
+        run: |
+          echo "$APPLICATION_SECRET" > sendy-notification-consumer/src/main/resources/application-secret.yml
+      - name: application-secret.yml 생성
+        env:
+          APPLICATION_SECRET: ${{ secrets.APPLICATION_SECRET_YML }}
+        run: |
+          echo "$APPLICATION_SECRET" > sendy-shared-mongoDB/src/main/resources/application-secret.yml
+      - name: application-secret.yml 생성
+        env:
+          APPLICATION_SECRET: ${{ secrets.APPLICATION_SECRET_YML }}
+        run: |
+          echo "$APPLICATION_SECRET" > sendy-transfer-consumer/src/main/resources/application-secret.yml
+      - name: application-secret.yml 생성
+        env:
+          APPLICATION_SECRET: ${{ secrets.APPLICATION_SECRET_YML }}
+        run: |
+          echo "$APPLICATION_SECRET" > sendy-transfer-producer/src/main/resources/application-secret.yml
+      - name: application-secret.yml 생성
+        env:
+          APPLICATION_SECRET: ${{ secrets.APPLICATION_SECRET_YML }}
+        run: |
+          echo "$APPLICATION_SECRET" > sendy-user-api/src/main/resources/application-secret.yml        
+       
+
       - name: Docker Buildx 설치
         uses: docker/setup-buildx-action@v2
       - name: 레지스트리 로그인
