--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,6 +72,11 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: set lower case owner name
+        run: echo "OWNER_LC=${OWNER,,}" >> $GITHUB_ENV
+        env:
+          OWNER: ${{ github.repository_owner }}
+
       - name: 빌드 앤 푸시
         uses: docker/build-push-action@v3
         with:
@@ -79,8 +84,8 @@ jobs:
           file: ${{ matrix.module }}/Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/${{ matrix.module }}:${{ needs.makeTagAndRelease.outputs.tag_name }}
-            ghcr.io/${{ github.repository_owner }}/${{ matrix.module }}:latest
+            ghcr.io/${{ env.OWNER_LC }}/${{ matrix.module }}:${{ needs.makeTagAndRelease.outputs.tag_name }}
+            ghcr.io/${{ env.OWNER_LC }}/${{ matrix.module }}:latest
 
   deploy:
     runs-on: ubuntu-latest
