--- a/sendy-transfer-producer/Dockerfile
+++ b/sendy-transfer-producer/Dockerfile
@@ -11,7 +11,7 @@ COPY settings.gradle.kts ./
 COPY sendy-shared-kafka/ sendy-shared-kafka/
 
 # 현재 모듈 복사
-COPY sendy-transfer-producer/ sendy-transfer-producer/
+COPY . .
 
 RUN chmod +x ./gradlew
 
