deploy 수정반영 테스트

--- a/sendy-notification-api/Dockerfile
+++ b/sendy-notification-api/Dockerfile
@@ -8,7 +8,7 @@ COPY build.gradle.kts ./
 COPY settings.gradle.kts ./
 
 # 공통 모듈들 복사
-COPY sendy-shared-mongoDB/ sendy-shared-mongoDB/
+COPY ../sendy-shared-mongoDB sendy-shared-mongoDB/
 
 # 현재 모듈 복사
 COPY . .
