--- a/sendy-transfer-scheduler/Dockerfile
+++ b/sendy-transfer-scheduler/Dockerfile
@@ -8,8 +8,8 @@ COPY build.gradle.kts ./
 COPY settings.gradle.kts ./
 
 # 의존 모듈만 복사 (sendy-legacy-api가 필요한 것만)
-COPY ../sendy-shared-kafka sendy-shared-kafka/
-COPY ../sendy-transfer-domain sendy-transfer-domain/
+COPY sendy-shared-kafka/ sendy-shared-kafka/
+COPY sendy-transfer-domain/ sendy-transfer-domain/
 
 # 현재 모듈 복사
 COPY . .
