--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,8 +47,6 @@ jobs:
           sendy-legacy-api,
           sendy-notification-api,
           sendy-notification-consumer,
-          sendy-shared-mongo,
-          sendy-shared-kafka,
           sendy-transfer-consumer,
           sendy-transfer-producer,
           sendy-user-producer
@@ -117,6 +115,7 @@ jobs:
             sendy-notification-api/src/main/resources/application-secret.yml,
             sendy-notification-consumer/src/main/resources/application-secret.yml,
             sendy-shared-mongo/src/main/resources/application-secret.yml,
+            sendy-shared-kafka/src/main/resources/application-secret.yml,
             sendy-transfer-consumer/src/main/resources/application-secret.yml,
             sendy-transfer-producer/src/main/resources/application-secret.yml,
             sendy-user-producer/src/main/resources/application-secret.yml
