--- a/sendy-notification-consumer/Dockerfile
+++ b/sendy-notification-consumer/Dockerfile
@@ -23,7 +23,7 @@ FROM eclipse-temurin:21.0.4_7-jre-alpine
 WORKDIR /app
 
 # 빌드된 jar 파일 복사
-COPY --from=build /builder/sendy-notification-consumer/build/libs/sendy-notification-consumer.jar app.jar
+COPY --from=build /builder/sendy-notification-consumer/build/libs/*.jar app.jar
 
 # 애플리케이션 실행
 ENTRYPOINT ["java", "-jar", "app.jar"]
