--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -127,7 +127,7 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ env.OWNER_LC }} --password-stdin
-            docker compose -f docker-compose/docker-compose.prod.spring.yml down
-            docker compose -f docker-compose/docker-compose.prod.spring.yml up -d
+            docker-compose -f docker-compose/docker-compose.prod.spring.yml down --remove-orphans
+            docker-compose -f docker-compose/docker-compose.prod.spring.yml up --build -d
             docker system prune -f
     
