--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,15 +51,6 @@ jobs:
           sendy-user-producer
         ]
     steps:
-      - uses: actions/checkout@v4
-
-      - name: application-secret.yml 생성
-        env:
-          APPLICATION_SECRET: ${{ secrets.APPLICATION_SECRET_YML }}
-        run: |
-          mkdir -p ${{ matrix.module }}/src/main/resources
-          echo "$APPLICATION_SECRET" > ${{ matrix.module }}/src/main/resources/application-secret.yml
-
       - name: Docker Buildx 설치
         uses: docker/setup-buildx-action@v2
 
@@ -95,13 +86,6 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      - name: 설정 파일 생성
-        env:
-          DOCKER_COMPOSE_PROD_SPRING: ${{ secrets.DOCKER_COMPOSE_PROD_SPRING_YML }}
-        run: |
-          mkdir -p docker-compose
-          echo "$DOCKER_COMPOSE_PROD_SPRING" > docker-compose/docker-compose.prod.spring.yml
-
       - name: secrets EC2로 전송
         uses: appleboy/scp-action@master
         with:
@@ -109,14 +93,9 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           source: |
-            docker-compose/docker-compose.prod.spring.yml,
-            sendy-legacy-api/src/main/resources/application-secret.yml,
-            sendy-notification-consumer/src/main/resources/application-secret.yml,
-            sendy-shared-mongo/src/main/resources/application-secret.yml,
-            sendy-shared-kafka/src/main/resources/application-secret.yml,
-            sendy-transfer-consumer/src/main/resources/application-secret.yml,
-            sendy-transfer-producer/src/main/resources/application-secret.yml,
-            sendy-user-producer/src/main/resources/application-secret.yml
+            docker-compose/docker-compose.prod.spring.yml
+            docker-compose/mysql/cnf/**
+            docker-compose/mysql/initdb.d/**
           target: "/home/ec2-user/"
 
       - name: 스프링 배포
@@ -126,8 +105,10 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ env.OWNER_LC }} --password-stdin
+            cd /home/ec2-user
+            echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io -u ${{ env.OWNER_LC }} --password-stdin
             docker-compose -f docker-compose/docker-compose.prod.spring.yml down --remove-orphans
-            docker-compose -f docker-compose/docker-compose.prod.spring.yml up --build -d
+            docker-compose -f docker-compose/docker-compose.prod.spring.yml pull
+            docker-compose -f docker-compose/docker-compose.prod.spring.yml up -d --remove-orphans
             docker system prune -f
     
