deploy 수정반영 테스트

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,8 @@ jobs:
           sendy-notification-consumer,
           sendy-transfer-consumer,
           sendy-transfer-producer,
-          sendy-user-producer
+          sendy-user-producer,
+          sendy-transfer-scheduler
         ]
     steps:
       - uses: actions/checkout@v4
