feat: 애플리케이션 빌드 경로 재수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,7 +69,7 @@ jobs:
       - name: 빌드 앤 푸시
         uses: docker/build-push-action@v3
         with:
-          context: ./${{ matrix.module }}
+          context: ${{ matrix.module }}
           file: Dockerfile
           push: true
           tags: ghcr.io/${{ env.OWNER_LC }}/${{ matrix.module }}:latest
