--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,6 +51,7 @@ jobs:
           sendy-user-producer
         ]
     steps:
+      - uses: actions/checkout@v4
       - name: Docker Buildx 설치
         uses: docker/setup-buildx-action@v2
 
@@ -69,7 +70,7 @@ jobs:
       - name: 빌드 앤 푸시
         uses: docker/build-push-action@v3
         with:
-          context: ${{ matrix.module }}
-          file: Dockerfile
+          context: .
+          file: ./${{ matrix.module }}/Dockerfile
           push: true
           tags: ghcr.io/${{ env.OWNER_LC }}/${{ matrix.module }}:latest
